--- a/devops-project.html
+++ b/devops-project.html
@@ -3,6 +3,10 @@
 <h1>A Working Devops Project</h1>
 <hr/>
 <p>my first testing</p>
+<pre>
+This is sooooo... interesting!!
+feel powerful..
+</pre>
 <hr/>
 <br/>
 	</body>
